chore: fix some links, spacings and texts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   }
 }
 
+html,body {
+  scroll-behavior: smooth
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
